syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/demola234/todogrpc/pb";

message Task {
    string task_name = 1;
    int32 user_id = 2;
    int32 category_id = 3;
    string task_description = 4;
    string task_deadline = 5;
    string task_status = 6;
    string task_priority = 7;
    google.protobuf.Timestamp task_createdAt = 8;
    google.protobuf.Timestamp task_updatedAt = 9;
    int32 task_id = 10;
}